修改程序啟動參數